@@ -102,6 +102,45 @@ The Python API describes a lens model with a [[file:lensmodels.org::#representat
 and the configuration]], while the C API stores the same information in a
 =mrcal_lensmodel_t=.
 
+* Camera models
+:PROPERTIES:
+:CUSTOM_ID: cameramodel-in-c
+:END:
+
+We can also represent a full camera model in C. This is a lens model with a pose
+and imager dimension: the full set of things in a [[file:cameramodels.org::+TITLE: Camera model representation in memory and on disk][=.cameramodel= file]]. The
+definitions appear in [[https://www.github.com/dkogan/mrcal/blob/master/mrcal-types.h][=mrcal-types.h=]]:
+
+#+begin_src c
+typedef struct
+{
+    double            rt_cam_ref[6];
+    unsigned int      imagersize[2];
+    mrcal_lensmodel_t lensmodel;
+    double            intrinsics[];
+} mrcal_cameramodel_t;
+
+typedef union
+{
+    mrcal_cameramodel_t m;
+    struct
+    {
+        double            rt_cam_ref[6];
+        unsigned int      imagersize[2];
+        mrcal_lensmodel_t lensmodel;
+        double intrinsics[4];
+    };
+} mrcal_cameramodel_LENSMODEL_LATLON_t;
+
+//// And versions for all the other lens models with statically-known
+//// intrinsics-array sizes. Today LENSMODEL_SPLINED_STEREOGRAPHIC is the only
+//// one that has a dynamic intrinsics size, and thus
+//// mrcal_cameramodel_LENSMODEL_SPLINED_STEREOGRAPHIC_t does not exist
+#+end_src
+
+If we know the lensmodel, we can use the lensmodel-specific structures.
+Otherwise we must allocate the memory dynamically, and void using =sizeof()=.
+
 * Projections
 The fundamental functions for projection and unprojection are defined here.
 =mrcal_project()= is the main routine that implements the "forward" direction,
@@ -367,16 +406,8 @@ This contains some statistics describing the discovered optimal solution.
 A simple interface for reading/writing [[file:cameramodels.org][=.cameramodel=]] data from C is available:
 
 #+begin_src c
-typedef struct
-{
-    double            rt_cam_ref[6];
-    unsigned int      imagersize[2];
-    mrcal_lensmodel_t lensmodel;
-    double            intrinsics_data[];
-} mrcal_cameramodel_t;
-
 // if len>0, the string doesn't need to be 0-terminated. If len<=0, the end of
-// the buffer IS indicated by a 0 bytes
+// the buffer IS indicated by a '\0' byte
 mrcal_cameramodel_t* mrcal_read_cameramodel_string(const char* string, int len);
 mrcal_cameramodel_t* mrcal_read_cameramodel_file  (const char* filename);
 void                 mrcal_free_cameramodel(mrcal_cameramodel_t** cameramodel);
@@ -385,8 +416,9 @@ bool mrcal_write_cameramodel_file(const char* filename,
                                   const mrcal_cameramodel_t* cameramodel);
 #+end_src
 
-Only the =.cameramodel= file format is supported by these C functions. The
-Python API supports more formats.
+This reads and write the [[#cameramodel-in-c][=mrcal_cameramodel_t= structures]]. Only the
+=.cameramodel= file format is supported by these C functions. The Python API
+supports more formats.
 
 * Image reading/writing
 mrcal includes simple functions for reading/writing images. These use the
